--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:TaiaDBVSxdl0+ChUMutIoq3h14LFL82al91DzfmP4YE=
+APP_KEY=base64:zCM1WPxUrDnlJ15Gb/Q3QlSMd9r1yyM6ftqFIRWdj34=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=matildasbeauty
+DB_DATABASE=shopickers
 DB_USERNAME=root
 DB_PASSWORD=
 
