--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=rds-mb-live.cyhzddplaevk.us-west-2.rds.amazonaws.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rds-mb-live
-DB_USERNAME=admin
-DB_PASSWORD=123456789
+DB_DATABASE=shopickers
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
