--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -37,10 +37,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_S3_ACCESS_KEY_ID=AKIAZG2LF5S75FLWSKNO
+AWS_S3_SECRET_ACCESS_KEY=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
+AWS_S3_DEFAULT_REGION=us-west-2
+AWS_S3_BUCKET=mb.storage
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
