--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/omnipay": "^3.0",
-        "omnipay/paypal": "^3.0"
+        "omnipay/paypal": "^3.0",
+        "phpoffice/phpspreadsheet": "^1.25"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
