--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "league/omnipay": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "omnipay/paypal": "^3.0",
         "phpoffice/phpspreadsheet": "^1.25"
     },
